# soil

./: .gitmodules  CMakeLists.txt  README.md
cmake/stb/: CMakeLists.txt
include/SOIL/: SOIL.h  image_dxt.h  image_helper.h  stbi_dds_aug.h
src/: image_helper.c  soil.c  stbi_dds_aug.c
